# execution_service

./: Cargo.toml  build.rs  execution.toml
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/messaging/: gateway_client.rs  heartbeat_publisher.rs  kill_switch_subscriber.rs  lifecycle_publisher.rs  mod.rs  mode_subscriber.rs  orchestration_handler.rs  risk_subscriber.rs  wire_codec.rs
src/adapters/metrics/: health_endpoint.rs  metrics_adapter.rs  mod.rs
src/adapters/persistence/: journal_storage.rs  mod.rs
src/app_tracing/: macros.rs
src/config/: app_config.rs
src/core/: mod.rs
src/core/application/: execution_engine.rs  execution_service.rs  idempotency.rs  kill_switch.rs  mod.rs  mode_controller.rs  order_tracker.rs
src/core/domain/: errors.rs  execution_config.rs  mod.rs  operation_mode.rs  order_lifecycle.rs  order_state.rs  risk_decision.rs
src/core/infrastructure/: mutex_ext.rs
src/core/patterns/: circuit_breaker.rs  mod.rs  retry_policy.rs  telemetry_decorator.rs
src/core/ports/: gateway_client_port.rs  health_port.rs  journal_port.rs  lifecycle_pub_port.rs  metrics_port.rs  mod.rs  orchestration_port.rs  risk_input_port.rs
src/infra/: http_server.rs  mod.rs
src/infra/cli/: commands.rs
tests/: correlation_chain_integration.rs  execution_engine_integration.rs  idempotency_integration.rs  order_state_machine_unit.rs
