[package]
name = "execution-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { version = "1", features = ["full"] }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
rmp-serde      = "1"
zmq            = "0.10"
axum           = "0.7"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait    = "0.1"
dotenvy        = "0.15"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
redb           = "2"
toml           = "0.8"
